--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>배열 Array</title>
+  <link rel="stylesheet" href="css/style.css">
   <script defer src="script.js"></script>
 </head>
 
 <body>
+  <nav>
+    <button>reset</button>
+    <button>active</button>
+  </nav>
 
+  <div id='box'></div>
 </body>
 
 </html>
