--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 </head>
 
 <body>
-  <nav>
-    <button>reset</button>
-    <button>active</button>
-    <button>toggle</button>
-  </nav>
-
-  <div id='box'></div>
+  <main>
+    <article class="btnToggle">
+      <div class="top"></div>
+      <div class="middle"></div>
+      <div class="bottom"></div>
+    </article>
 </body>
 
 </html>
