자바스크립트 모바일 패널 이벤트 연결

--- a/index.html
+++ b/index.html
@@ -11,11 +11,17 @@
 
 <body>
   <main>
+    <!--tooglgle-->
     <article class="btnToggle">
       <div class="top"></div>
       <div class="middle"></div>
       <div class="bottom"></div>
     </article>
+    <!--mobile panel-->
+    <nav class="mobilePanel">
+
+    </nav>
+
 </body>
 
 </html>
