--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>배열 Array</title>
+  <title>JS-ClassName</title>
   <link rel="stylesheet" href="css/style.css">
   <script defer src="script.js"></script>
 </head>
